# de-teaching

./: README.md
aks/database/: configmap.yaml  deployment.yaml  svc.yaml
aks/http-svc/: configmap.yaml  deployment.yaml  ingress.yaml  svc.yaml
backend/: Dockerfile  README.MD  pyproject.toml
backend/local/: START_SERVER.sql  docker-compose.yml  test_that_api.http
backend/src/base/: duck.py
backend/src/http-svc/: backend.py
backend/src/repository/: repository.py
cli/: usefull_tools.MD
networking/: networking.MD  wireshark.MD
streaming/: pyproject.toml
streaming/local/: docker-compose.yaml
streaming/src/basics/: inter_process.py  intra_process.py
streaming/src/consumer/: kafka_consumer.py  rabbit_consumer.py
streaming/src/producer/: kafka_producer.py  rabbit_producer.py
streaming/src/utils/: queue.py
