[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
dependencies = [
    "psycopg[binary]",
    "fastapi",
    "uvicorn"
    ]
name = "teach-that-api"
version = "0.0.1"
authors = [{ name = "Marc van Reijen" }]
description = "Super simple CRUD stuff to show how k8s works"
readme = "README.md"
requires-python = ">=3.9" #">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
