[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
dependencies = [
    "kafka-python",
    "pika"
    ]
name = "stream"
version = "0.0.1"
authors = [{ name = "Marc van Reijen" }]
description = "Super simple publisher consumer things for kafka and rabbitMQ"
readme = "README.md"
requires-python = ">=3.9" #">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
